# Calculadora-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-calculator.slnx
CalculatorGui/: ActivePropertyConverter.cs  App.xaml  App.xaml.cs  ButtonTextConverter.cs  CalculatorBridge.cs  CalculatorGui.csproj  HistoryItem.cs  StyleConverter.cs
CalculatorGui/Resources/: DarkTheme.xaml  LightTheme.xaml  Styles.xaml
CalculatorGui/View/: CalculatorView.xaml  CalculatorView.xaml.cs  ConverterView.xaml  ConverterView.xaml.cs  GraphingView.xaml  GraphingView.xaml.cs  HistoryControl.xaml  HistoryControl.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MathDisplayControl.cs  MenuControl.xaml  MenuControl.xaml.cs
CalculatorGui/ViewModel/: ButtonInfo.cs  CalculatorViewModel.cs  ConverterViewModel.cs  GraphingViewModel.cs  MainViewModel.cs  RelayCommand.cs  ViewModelBase.cs
src/: lib.rs  main.rs  substitute.rs  units.rs
src/calculator/: ast.rs  calculator.rs  evaluator.rs  lexer.rs  mod.rs  parser.rs  suite_regression.rs  suite_static.rs  suite_stress.rs  token.rs  value.rs
