[package]
name = "calculator"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
description = "Motor de calculadora científica avanzada con interfaz FFI para .NET/C#"
authors = ["Hugo S.M."]
repository = "https://github.com/Hugo-S-M-28/Calculadora-Rust"
license = "MIT"
keywords = ["calculator", "math", "ffi", "scientific"]
categories = ["science", "mathematics"]

# Ver más en https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "calculator_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
num-complex = "0.4"
num-integer = "0.1"
statrs = "0.16"
rand = "0.8"
nalgebra = "0.32"